// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReadOnlyHearingTimeWithZone Displays readonly time when hearingStartTime prop has value 1`] = `
<ReadOnlyHearingTimeWithZone
  hearingStartTime="2021-07-29T08:30:00-04:00"
  onRender={
    [MockFunction] {
      "calls": Array [
        Array [
          "08:30",
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  timezone="America/New_York"
>
  <ReadOnly
    label="Hearing Time"
    text="8:30 AM Eastern"
  >
    <div
      data-css-1a5irm0=""
    >
      <strong>
        Hearing Time
      </strong>
      <pre>
        8:30 AM Eastern
      </pre>
    </div>
  </ReadOnly>
</ReadOnlyHearingTimeWithZone>
`;

exports[`ReadOnlyHearingTimeWithZone Displays readonly time when hearingStartTime prop has value 2`] = `
<ReadOnlyHearingTimeWithZone
  hearingStartTime="2021-07-29T08:30:00-04:00"
  onRender={
    [MockFunction] {
      "calls": Array [
        Array [
          "05:30",
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  timezone="America/Los_Angeles"
>
  <ReadOnly
    label="Hearing Time"
    text="5:30 AM Pacific / 8:30 AM Eastern"
  >
    <div
      data-css-1a5irm0=""
    >
      <strong>
        Hearing Time
      </strong>
      <pre>
        5:30 AM Pacific / 8:30 AM Eastern
      </pre>
    </div>
  </ReadOnly>
</ReadOnlyHearingTimeWithZone>
`;

exports[`ReadOnlyHearingTimeWithZone Displays readonly time when hearingStartTime prop has value 3`] = `
<ReadOnlyHearingTimeWithZone
  hearingStartTime="2021-07-29T08:30:00-04:00"
  onRender={
    [MockFunction] {
      "calls": Array [
        Array [
          "08:30",
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  timezone="America/Denver"
>
  <ReadOnly
    label="Hearing Time"
    text="8:30 AM Mountain / 10:30 AM Eastern"
  >
    <div
      data-css-1a5irm0=""
    >
      <strong>
        Hearing Time
      </strong>
      <pre>
        8:30 AM Mountain / 10:30 AM Eastern
      </pre>
    </div>
  </ReadOnly>
</ReadOnlyHearingTimeWithZone>
`;

exports[`ReadOnlyHearingTimeWithZone Displays readonly time when hearingStartTime prop has value 4`] = `
<ReadOnlyHearingTimeWithZone
  hearingStartTime="2021-07-29T08:30:00-04:00"
  onRender={
    [MockFunction] {
      "calls": Array [
        Array [
          "08:30",
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  timezone="America/Chicago"
>
  <ReadOnly
    label="Hearing Time"
    text="8:30 AM Central / 9:30 AM Eastern"
  >
    <div
      data-css-1a5irm0=""
    >
      <strong>
        Hearing Time
      </strong>
      <pre>
        8:30 AM Central / 9:30 AM Eastern
      </pre>
    </div>
  </ReadOnly>
</ReadOnlyHearingTimeWithZone>
`;

exports[`ReadOnlyHearingTimeWithZone Displays readonly time when hearingStartTime prop has value 5`] = `
<ReadOnlyHearingTimeWithZone
  hearingStartTime="2021-07-29T08:30:00-04:00"
  onRender={
    [MockFunction] {
      "calls": Array [
        Array [
          "08:30",
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  timezone="America/Indiana/Indianapolis"
>
  <ReadOnly
    label="Hearing Time"
    text="8:30 AM Indiana (East) / 8:30 AM Eastern"
  >
    <div
      data-css-1a5irm0=""
    >
      <strong>
        Hearing Time
      </strong>
      <pre>
        8:30 AM Indiana (East) / 8:30 AM Eastern
      </pre>
    </div>
  </ReadOnly>
</ReadOnlyHearingTimeWithZone>
`;

exports[`ReadOnlyHearingTimeWithZone Displays readonly time when hearingStartTime prop has value 6`] = `
<ReadOnlyHearingTimeWithZone
  hearingStartTime="2021-07-30T12:30:00-04:00"
  onRender={
    [MockFunction] {
      "calls": Array [
        Array [
          "12:30",
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  timezone="America/New_York"
>
  <ReadOnly
    label="Hearing Time"
    text="12:30 PM Eastern"
  >
    <div
      data-css-1a5irm0=""
    >
      <strong>
        Hearing Time
      </strong>
      <pre>
        12:30 PM Eastern
      </pre>
    </div>
  </ReadOnly>
</ReadOnlyHearingTimeWithZone>
`;

exports[`ReadOnlyHearingTimeWithZone Displays readonly time when hearingStartTime prop has value 7`] = `
<ReadOnlyHearingTimeWithZone
  hearingStartTime="2021-07-30T12:30:00-04:00"
  onRender={
    [MockFunction] {
      "calls": Array [
        Array [
          "12:30",
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  timezone="America/Los_Angeles"
>
  <ReadOnly
    label="Hearing Time"
    text="12:30 PM Pacific / 3:30 PM Eastern"
  >
    <div
      data-css-1a5irm0=""
    >
      <strong>
        Hearing Time
      </strong>
      <pre>
        12:30 PM Pacific / 3:30 PM Eastern
      </pre>
    </div>
  </ReadOnly>
</ReadOnlyHearingTimeWithZone>
`;

exports[`ReadOnlyHearingTimeWithZone Displays readonly time when hearingStartTime prop has value 8`] = `
<ReadOnlyHearingTimeWithZone
  hearingStartTime="2021-07-30T12:30:00-04:00"
  onRender={
    [MockFunction] {
      "calls": Array [
        Array [
          "12:30",
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  timezone="America/Denver"
>
  <ReadOnly
    label="Hearing Time"
    text="12:30 PM Mountain / 2:30 PM Eastern"
  >
    <div
      data-css-1a5irm0=""
    >
      <strong>
        Hearing Time
      </strong>
      <pre>
        12:30 PM Mountain / 2:30 PM Eastern
      </pre>
    </div>
  </ReadOnly>
</ReadOnlyHearingTimeWithZone>
`;

exports[`ReadOnlyHearingTimeWithZone Displays readonly time when hearingStartTime prop has value 9`] = `
<ReadOnlyHearingTimeWithZone
  hearingStartTime="2021-07-30T12:30:00-04:00"
  onRender={
    [MockFunction] {
      "calls": Array [
        Array [
          "12:30",
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  timezone="America/Chicago"
>
  <ReadOnly
    label="Hearing Time"
    text="12:30 PM Central / 1:30 PM Eastern"
  >
    <div
      data-css-1a5irm0=""
    >
      <strong>
        Hearing Time
      </strong>
      <pre>
        12:30 PM Central / 1:30 PM Eastern
      </pre>
    </div>
  </ReadOnly>
</ReadOnlyHearingTimeWithZone>
`;

exports[`ReadOnlyHearingTimeWithZone Displays readonly time when hearingStartTime prop has value 10`] = `
<ReadOnlyHearingTimeWithZone
  hearingStartTime="2021-07-30T12:30:00-04:00"
  onRender={
    [MockFunction] {
      "calls": Array [
        Array [
          "12:30",
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  timezone="America/Indiana/Indianapolis"
>
  <ReadOnly
    label="Hearing Time"
    text="12:30 PM Indiana (East) / 12:30 PM Eastern"
  >
    <div
      data-css-1a5irm0=""
    >
      <strong>
        Hearing Time
      </strong>
      <pre>
        12:30 PM Indiana (East) / 12:30 PM Eastern
      </pre>
    </div>
  </ReadOnly>
</ReadOnlyHearingTimeWithZone>
`;

exports[`ReadOnlyHearingTimeWithZone Displays readonly time when hearingStartTime prop has value 11`] = `
<ReadOnlyHearingTimeWithZone
  hearingStartTime={null}
  onRender={[MockFunction]}
  timezone="America/New_York"
/>
`;

exports[`ReadOnlyHearingTimeWithZone Displays readonly time when hearingStartTime prop has value 12`] = `
<ReadOnlyHearingTimeWithZone
  hearingStartTime={null}
  onRender={[MockFunction]}
  timezone="America/Los_Angeles"
/>
`;

exports[`ReadOnlyHearingTimeWithZone Displays readonly time when hearingStartTime prop has value 13`] = `
<ReadOnlyHearingTimeWithZone
  hearingStartTime={null}
  onRender={[MockFunction]}
  timezone="America/Denver"
/>
`;

exports[`ReadOnlyHearingTimeWithZone Displays readonly time when hearingStartTime prop has value 14`] = `
<ReadOnlyHearingTimeWithZone
  hearingStartTime={null}
  onRender={[MockFunction]}
  timezone="America/Chicago"
/>
`;

exports[`ReadOnlyHearingTimeWithZone Displays readonly time when hearingStartTime prop has value 15`] = `
<ReadOnlyHearingTimeWithZone
  hearingStartTime={null}
  onRender={[MockFunction]}
  timezone="America/Indiana/Indianapolis"
/>
`;
